css/portfolio.css
@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);

body {
  font-family: 'Lato', sans-serif;
  margin: 0;
  color: #212121;
  font-size: 1em;
  background-color: #FFD10F;
}

.content-container{
  font-size: 1.5em;
  width: 80%;
  margin: auto;
  margin-top: 170px;
  margin-bottom: 100px;
  text-align: center;
}

header {
  font-size: 1.3em;
  top: 0;
  right: 0;
  left: 0;
  z-index: 1000;
  position: fixed;
  background-color: #FFD10F;
}

nav {
  text-align: right;
  color: #fff;
  font-weight: 300;
  height: 100%;
}

nav ul {
  list-style-type: none;
  padding: 35px;
  margin: 0;
}

a {
  color: #fe6962;
  text-decoration: none;
}

a:hover {
  color: #FFD10F;
}

nav a:hover {
  color: #fff;
}

.nav-li {
  display: inline-block;
  margin-left: 15px;
  margin-right: 15px;
}

.nav-link{
  text-decoration: none;
  color: #fff;
  margin-left: 5px;
  font-weight: 600;
}

.name {
  font-size: 4em;
  text-align: center;
  color: #fff;
  font-weight: 400;
}

.highlight {
  font-weight: 800;
}

.strikethrough {
  text-decoration: line-through;
}

h2{
  text-align: center;
  text-transform: uppercase;
  font-weight: 400;
  font-size: 2em;
  font-weight: 800;
}

h3 {
  text-transform: uppercase;
  font-weight: 400;
  font-size: 30px;
  font-weight: bold;
}

.project:not(:last-child) {
  padding-bottom: 10%;
  border-bottom: 2px solid lightgrey;
}

.project {
  margin-top: 10%;
  margin-bottom: 10%;
}

.about-content {
  text-align: left;
}

.about-content, #social-icons {
  margin-top: 5%;
}

.project-link {
  padding: 2em 1em 0 0;
  text-decoration: none;
  display: inline-block;
  width: auto;
  text-transform: uppercase;
  text-decoration: none;
}

.project-link:hover {
   color: #FFD10F;
}

.project-image {
  width: 100%;
  padding: 30px 0;
  display: block;
  margin: 0 auto;
  text-align: center;
}

.iphone {
  padding: 30px 0;
  width: 30%;
  display: block;
  margin: 0 auto;
  text-align: center;
}

#social-icons {
  text-align: center;
}

#social-icons a {
  color: #fff;
  font-size: 50px;
  text-decoration: none;
  padding: 5px;
}

#social-icons a:hover{
  color: #fe6962;
}

.left {
  display: inline-block;
  width: 60%;
}

.right {
  display: inline-block;
  width: 37%;
}

#resume {
  text-align: left;
  width: 70%;
  margin: 0 auto;
}

.resume-col-1, .resume-col-2 {
  width: 45%;
  display: inline-block;
  margin-right: 5%;
  vertical-align: top;
}

.resume-section {
  border-top: 6px solid #000;
  padding-top: 1%;
  padding-bottom: 2%;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
}

.resume-section h2 {
  text-align: left;
  font-weight: 800;
  text-transform: lowercase;
  margin: 0;
  padding-bottom: 2%;
}

.resume-section h3 {
  font-weight: bold;
  margin: 0;
  padding-bottom: 2%;
}

.resume-section .resume-title {
  text-transform: uppercase;
}

.resume-item {
  padding-top: 5%;
  padding-bottom: 5%;
}

.resume-item:not(:last-child) {
  border-bottom: 3px dashed lightgrey;
  padding-top: 5%;
  padding-bottom: 5%;
}

.resume-date, .resume-info, .resume-achievement {
  display: block;
  margin-top: 1%;
  margin-bottom: 1%;
}

.resume-date, .resume-achievement {
  font-weight: bold;
}

.resume-info .fa {
  font-size: 1.4em;
  color: #fe6962;
  padding: 0 2% 0 0;
}

.resume-info a:hover {
  color: #FFD10F;
}

.resume-download {
  margin-top: 10%;
  text-align: center;
}

.technologies {
  font-size: 1em;
}

.resume-download-link{
  display: inline-block;
  border: 3px solid #FFD10F;
  text-transform: uppercase;
  text-decoration: none;
  text-align: center;
  padding: 1em;
  margin: 1em;
}

.profile {
  width: 30%;
  border-radius: 50%;
}

.hamburger {
  display: none;
}

/*tablet*/
@media screen and (max-width: 1023px){


}

/*mobile*/
@media screen and (max-width: 767px){

  .name {
      font-size: 2em;
  }

  .resume-download-link{
    font-size: 0.7em;
  }

  .profile {
    width: 60%;
  }

  .project-link{
    font-size: 0.7em;
    padding: 1em 0em 0em 1em;
  }

  .nav-li {
    display: block;
  }

  .hamburger {
    display: block;
    padding: 20px;
  }

  nav ul {
    max-height: 0;
    padding: 0;
    overflow: hidden;
    -webkit-transition: max-height 0.8s;
    -moz-transition: max-height 0.8s;
    transition: max-height 0.8s;
  }

  nav ul.show-menu {
    padding-bottom: 1.1em;
    /*height: auto;*/
    max-height: 160px;
  }

  #resume {
    width: 100%;
  }

  .resume-col-1, .resume-col-2 {
    width: 100%;
    display: block;
    margin-right: 0;
  }
}

